CommercialApp/objects/Performance_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Call_Per_Target__c</fullName>
        <label>Call Per Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contribution__c</fullName>
        <label>Contribution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Non_Target_Sales__c</fullName>
        <label>Current Non Target Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Period_Daily_Average_Sales__c</fullName>
        <label>Current Period Daily Average Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Period_Ordering_Account__c</fullName>
        <label>Current Period Ordering Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Period_Sales__c</fullName>
        <label>Current Period Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Reach__c</fullName>
        <label>Current Reach</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Target_Sales__c</fullName>
        <label>Current Target Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Segment__c</fullName>
        <label>Customer Segment</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_Average_Goal__c</fullName>
        <label>Daily Average Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geo_Key__c</fullName>
        <label>Geo Key</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography_Relation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geography Relation</label>
        <referenceTo>Geography__c</referenceTo>
        <relationshipLabel>Performance Summaries</relationshipLabel>
        <relationshipName>Performance_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Growth__c</fullName>
        <label>Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Market_Name__c</fullName>
        <label>Market Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nation_Reach__c</fullName>
        <label>Nation Reach</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTP__c</fullName>
        <label>PTP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Target_Ordering__c</fullName>
        <label>Percent Target Ordering</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Previous_Period_Daily_Average_Sales__c</fullName>
        <label>Previous Period Daily Average Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Period_Ordering_Account__c</fullName>
        <label>Previous Period Ordering Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Period_Sales__c</fullName>
        <label>Previous Period Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Key__c</fullName>
        <label>Product Key</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Relation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Relation</label>
        <referenceTo>Product_Hierarchy__c</referenceTo>
        <relationshipLabel>Performance Summaries</relationshipLabel>
        <relationshipName>Performance_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Cycle_Date__c</fullName>
        <label>Report Cycle Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Bucket_Key__c</fullName>
        <label>Time Bucket Key</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Key__c</fullName>
        <label>Time Key</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Relation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Relation</label>
        <referenceTo>Time_Bucket__c</referenceTo>
        <relationshipLabel>Performance Summaries</relationshipLabel>
        <relationshipName>Performance_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vials_to_Goal__c</fullName>
        <label>Vials to Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Performance Summary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Geo_Key__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Performance Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Performance Summaries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>